# test

./: CMakeLists.txt
DesignPattern/: HelloWorld.cl  builder.cpp
Dijkstra/: oclDijkstra.cpp  oclDijkstraKernel.cpp  oclDijkstraKernel.h
OpenCLInfo/: OpenCLInfo.cpp
